--- a/index.html
+++ b/index.html
@@ -1,58 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Victor Bisterfeld - C# Programmer, Game Developer (Unity Game Engine), Germany</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <title>Beast Bros. Games - Game Development Studio in Germany, Braunschweig</title>
+    <meta name="description" content="Independent game development studio creating immersive mobile gaming experiences. Download our latest games on Google Play or App Store.">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    animation: {
+                        'bounce-slow': 'bounce 3s infinite',
+                        'pulse-slow': 'pulse 4s infinite',
+                        'ping-slow': 'ping 5s infinite',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
-
-<body>
-    <div class="title">
-        <div id="n" class="scale-up-hor-center">
-        </div>
-        <div class="info scale-up-hor-center">
-    <p><p id="0"> Unity C# Developer </p></p>
-
-    <div name="hidden-ho-ho">
-        <div id="V" hidden href="">Victor, it's me...</div>
-        <div id="I" hidden href="">I like develop Games for PC, Android, iOS.<br/>Love C#, Golang, Unity, Kotlin, React, TypeScript and other People...</div>
-        <div id="C" hidden href="">Coffee, i drink: <br/>- ☕/~1000 Lines written code<br/>- ☕/10 Readed lines to understand the code</div>
-        <div id="T" hidden href="">Today is my best day, maybe, because you visit my page ;)</div>
-        <div id="O" hidden href="">Oh no, try again.</div>
-        <div id="R" hidden href="">Read it again... i am not ready yet</div>
-        <a id="hwt-integrate-strapi-unity" hidden target="_blank" href="https://github.com/gbviktor/hwt-integrate-strapi-unity">project/hwt-integrate-strapi-unity</a>
-        <div id="B" hidden href=""></div>
-        <div id="I2" hidden href=""></div>
-        <div id="S" hidden href=""></div>
-        <div id="T" hidden href=""></div>
-        <div id="E" hidden href=""></div>
-        <div id="R2" hidden href=""></div>
-        <div id="F" hidden href=""></div>
-        <div id="E2" hidden href=""></div>
-        <div id="L" hidden href=""></div>
-        <div id="D" hidden href="">Datetime is so complex. <br /> But wait a Minute, you clicked maybe minimum 10 Time for now ;)<br /> It's time to do great things, go do it.</div>
-    </div>
+<body class="bg-gradient-to-br from-slate-900 via-purple-900 to-slate-900">
+<!-- Navigation -->
+<nav class="fixed top-0 left-0 right-0 z-50 bg-slate-900/80 backdrop-blur-sm border-b border-purple-500/20">
+    <div class="max-w-6xl mx-auto px-4 py-4">
+        <div class="flex justify-between items-center">
+            <a href="/" class="text-2xl font-bold bg-gradient-to-r from-purple-400 to-teal-400 bg-clip-text text-transparent">
+                Beast Bros. Games
+            </a>
+            <div class="flex gap-6">
+                <a href="./" class="text-purple-400 font-semibold">Home</a>
+                <a href="./impressum" class="text-gray-300 hover:text-white transition-colors duration-300">Impressum</a>
+            </div>
         </div>
     </div>
+</nav>
+<!-- Hero Section - Featured Game -->
+<section class="relative min-h-screen flex items-center justify-center px-4 py-16">
+    <div class="absolute inset-0 bg-gradient-to-r from-purple-600/20 to-teal-600/20"></div>
+    <div class="relative z-10 max-w-6xl mx-auto text-center">
+        <div class="mb-8">
+            <h1 class="text-5xl md:text-7xl font-bold text-white mb-6 leading-tight">
+
+
+                <span class="bg-gradient-to-r from-pink-400 to-pink-100 bg-clip-text text-transparent">
+                    <div class="flex items-center justify-center">
+
+                     <img class="" src="assets/1024logo.png" height="256" width="256"/>
+                    </div>
+                        Lowriders Comeback: Boulevard
+                    </span>
+            </h1>
+            <p class="text-xl md:text-2xl text-gray-300 mb-8 max-w-3xl mx-auto leading-relaxed">
+                Step into the world of Lowrider culture with Lowrider Comeback: Boulevard, an immersive online multiplayer game where you can customize, cruise, and show off your rides in a vibrant city. The possibilities are endless for creating your dream Lowrider.
+            </p>
+        </div>
+
+        <div class="flex flex-col sm:flex-row gap-6 justify-center items-center mb-12">
+            <a
+                    href="https://play.google.com/store/apps/details?id=com.MontanaGames.LowridersComebackBlvrd"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="group flex items-center gap-3 bg-gradient-to-r from-green-600 to-green-500 hover:from-green-500 hover:to-green-400 text-white px-8 py-4 rounded-xl font-semibold text-lg transition-all duration-300 transform hover:scale-105 hover:shadow-2xl"
+            >
+                Get on Google Play
+                <svg class="w-5 h-5 group-hover:translate-x-1 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
+                </svg>
+            </a>
+            <a
+                    href="https://apps.apple.com/us/app/lowriders-comeback-boulevard/id6714479204"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="group flex items-center gap-3 bg-gradient-to-r from-gray-600 to-gray-500 hover:from-green-500 hover:to-green-400 text-white px-8 py-4 rounded-xl font-semibold text-lg transition-all duration-300 transform hover:scale-105 hover:shadow-2xl"
+            >
+                Get on App Store
+                <svg class="w-5 h-5 group-hover:translate-x-1 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
+                </svg>
+            </a>
+<!--            <button class="flex items-center gap-3 border-2 border-purple-400 text-purple-400 hover:bg-purple-400 hover:text-white px-8 py-4 rounded-xl font-semibold text-lg transition-all duration-300 transform hover:scale-105">-->
+<!--                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">-->
+<!--                    <path d="M8 5v14l11-7z"/>-->
+<!--                </svg>-->
+<!--                Watch Trailer-->
+<!--            </button>-->
+        </div>
+
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-8 max-w-2xl mx-auto text-center">
+            <div>
+                <div class="text-3xl font-bold text-white mb-2">10K+</div>
+                <div class="text-gray-400 text-sm">Purchases</div>
+            </div>
+            <div>
+                <div class="text-3xl font-bold text-white mb-2">4.1★</div>
+                <div class="text-gray-400 text-sm">Rating</div>
+            </div>
+            <div>
+                <div class="text-3xl font-bold text-white mb-2">220+</div>
+                <div class="text-gray-400 text-sm">Vehicles</div>
+            </div>
+            <div>
+                <div class="text-3xl font-bold text-white mb-2">100%</div>
+                <div class="text-gray-400 text-sm">Online</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Floating elements -->
+    <div class="absolute top-20 left-10 w-20 h-20 bg-purple-500/20 rounded-full animate-bounce-slow"></div>
+    <div class="absolute bottom-20 right-10 w-16 h-16 bg-teal-500/20 rounded-full animate-pulse-slow"></div>
+    <div class="absolute top-1/2 left-20 w-12 h-12 bg-orange-500/20 rounded-full animate-ping-slow"></div>
+</section>
+
+<!-- Team Section -->
+<!--<section class="py-20 px-4 bg-gradient-to-r from-slate-800/50 to-purple-800/50">-->
+<!--    <div class="max-w-6xl mx-auto">-->
+<!--        <div class="text-center mb-16">-->
+<!--            <h2 class="text-4xl md:text-5xl font-bold text-white mb-6">-->
+<!--                Our <span class="bg-gradient-to-r from-purple-400 to-teal-400 bg-clip-text text-transparent">Team</span>-->
+<!--            </h2>-->
+<!--            <p class="text-xl text-gray-300 max-w-2xl mx-auto">-->
+<!--                Passionate creators united by our love for gaming and commitment to crafting unforgettable experiences-->
+<!--            </p>-->
+<!--        </div>-->
+
+<!--        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">-->
+<!--            &lt;!&ndash; Team Member 1 &ndash;&gt;-->
+<!--            <div class="group text-center transform transition-all duration-300 hover:scale-105">-->
+<!--                <div class="relative mb-6">-->
+<!--                    <div class="w-32 h-32 mx-auto rounded-full overflow-hidden bg-gradient-to-r from-purple-500 to-teal-500 p-1 transform transition-all duration-300 group-hover:scale-110">-->
+<!--                        <img-->
+<!--                                src="assets/v.png"-->
+<!--                                alt="Victor Bisterfeld"-->
+<!--                                class="w-full h-full object-cover rounded-full"-->
+<!--                        >-->
+<!--                    </div>-->
+<!--                    <div class="absolute inset-0 rounded-full bg-gradient-to-r from-purple-500/20 to-teal-500/20 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>-->
+<!--                </div>-->
+<!--                <h3 class="text-xl font-semibold text-white mb-2 group-hover:text-purple-400 transition-colors duration-300">-->
+<!--                    Victor Bisterfeld-->
+<!--                </h3>-->
+<!--                <p class="text-gray-400 font-medium">-->
+<!--                    Developer-->
+<!--                </p>-->
+<!--            </div>-->
+
+<!--            &lt;!&ndash; Team Member 2 &ndash;&gt;-->
+<!--            <div class="group text-center transform transition-all duration-300 hover:scale-105">-->
+<!--                <div class="relative mb-6">-->
+<!--                    <div class="w-32 h-32 mx-auto rounded-full overflow-hidden bg-gradient-to-r from-purple-500 to-teal-500 p-1 transform transition-all duration-300 group-hover:scale-110">-->
+<!--                        <img-->
+<!--                                src="/assets/o.jpeg"-->
+<!--                                alt="Olga Bisterfeld"-->
+<!--                                class="w-full h-full object-cover rounded-full"-->
+<!--                        >-->
+<!--                    </div>-->
+<!--                    <div class="absolute inset-0 rounded-full bg-gradient-to-r from-purple-500/20 to-teal-500/20 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>-->
+<!--                </div>-->
+<!--                <h3 class="text-xl font-semibold text-white mb-2 group-hover:text-purple-400 transition-colors duration-300">-->
+<!--                    Olga Bisterfeld-->
+<!--                </h3>-->
+<!--                <p class="text-gray-400 font-medium">-->
+<!--                    Developer-->
+<!--                </p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+<section class="py-20 px-4">
+    <div class="max-w-6xl mx-auto">
+        <div class="text-center mb-16">
+            <h2 class="text-4xl md:text-5xl font-bold text-white mb-6">
+                Our <span class="bg-gradient-to-r from-orange-400 to-red-400 bg-clip-text text-transparent">Partner</span>
+            </h2>
+            <div class="flex items-center justify-center"><a href="https://montana-games.com/" alt="Montana Games" target="_blank">
+                <img src="assets/mg.png" width="256"/></a>
+            </div>
+            <p class="text-xl text-gray-300 max-w-3xl mx-auto leading-relaxed">
+                In cooperation with us since 2016. <br />
+                <a href="https://montana-games.com/" target="_blank">Montana Games </a> Team, founded in 2012, dedicated to creating best simulator gaming experiences.
+
+            </p>
+        </div>
+    </div>
+</section>
+
+<!-- About Us Section -->
+<section class="py-20 px-4">
+    <div class="max-w-6xl mx-auto">
+        <div class="text-center mb-16">
+            <h2 class="text-4xl md:text-5xl font-bold text-white mb-6">
+                About <span class="bg-gradient-to-r from-orange-400 to-red-400 bg-clip-text text-transparent">Us</span>
+            </h2>
+            <p class="text-xl text-gray-300 max-w-3xl mx-auto leading-relaxed">
+                We're an independent game development team founded in 2016, dedicated to creating immersive gaming experiences that transport players to extraordinary worlds.
+            </p>
+        </div>
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
+                <div class="bg-gradient-to-br from-purple-600/20 to-purple-800/20 p-6 rounded-xl border border-purple-500/20 transform transition-all duration-300 hover:scale-105">
+                    <svg class="w-12 h-12 text-purple-400 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197m13.5-9a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0z"/>
+                    </svg>
+                    <h3 class="text-xl font-semibold text-white mb-2">Community First</h3>
+                    <p class="text-gray-400">Building lasting relationships with our players through authentic engagement and responsive support.</p>
+                </div>
+                <div class="bg-gradient-to-br from-teal-600/20 to-teal-800/20 p-6 rounded-xl border border-teal-500/20 transform transition-all duration-300 hover:scale-105">
+                    <svg class="w-12 h-12 text-teal-400 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                    </svg>
+                    <h3 class="text-xl font-semibold text-white mb-2">Quality Focus</h3>
+                    <p class="text-gray-400">Meticulous attention to detail in every aspect of game development, from mechanics to storytelling.</p>
+                </div>
+                <div class="bg-gradient-to-br from-orange-600/20 to-orange-800/20 p-6 rounded-xl border border-orange-500/20 transform transition-all duration-300 hover:scale-105">
+                    <svg class="w-12 h-12 text-orange-400 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"/>
+                    </svg>
+                    <h3 class="text-xl font-semibold text-white mb-2">Innovation</h3>
+                    <p class="text-gray-400">Constantly exploring new technologies and gameplay mechanics to create fresh experiences.</p>
+                </div>
+                <div class="bg-gradient-to-br from-red-600/20 to-red-800/20 p-6 rounded-xl border border-red-500/20 transform transition-all duration-300 hover:scale-105">
+                    <svg class="w-12 h-12 text-red-400 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
+                    </svg>
+                    <h3 class="text-xl font-semibold text-white mb-2">Global Reach</h3>
+                    <p class="text-gray-400">Creating games that resonate across cultures while celebrating diverse storytelling traditions.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-slate-900/80 py-12 px-4 border-t border-purple-500/20">
+    <div class="max-w-6xl mx-auto text-center">
+        <div class="mb-6">
+            <p class="text-gray-400">Crafting extraordinary gaming experiences</p>
+        </div>
+        <div class="text-gray-500 text-sm">
+            <p>2025 Beast Bros. Games</p>
+            <p class="mt-2">Make games with ❤️ for you.</p>
+        </div>
+        <div class="text-gray-500 text-sm mt-2">
+            <a href="/impressum">Impressum</a>
+        </div>
+    </div>
+</footer>
 </body>
-<script defer>
-    const l = ["V","I","C","T","O","R"]
-    const l2= ["B","I2","S","T","E","R2","F","E2","L","D"]
-    const hwt = "hwt-integrate-strapi-unity"
-    a(l);
-    s(hwt,"#");
-    a(l2);
-
-    window.onhashchange = c;
-    function a(x){x.forEach(y=> { s(y,y[0]);})};
-    function s(x,y){id("n").innerHTML+= '<span><a href="#'+x+'"">'+y[0]+'</a></span>';};
-    function id(x){return document.getElementById(x)};
-    function c(){h();id(window.location.hash.split('#')[1]).hidden = false;}
-    function h(){l.concat(l2).concat([hwt,"0"]).forEach(x=>{id(x).hidden = true;});}
-    
-    if(window.location.hash.startsWith("#")) c();
-</script>
 </html>
